--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@nandorojo/swr-firestore": "^0.16.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
@@ -12,7 +13,7 @@
     "bootstrap": "^5.0.0-beta2",
     "bootstrap-icons": "^1.4.0",
     "dayjs": "^1.10.4",
-    "firebase": "^8.2.9",
+    "firebase": "^9.6.11",
     "mediamachine": "^1.0.6",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
@@ -24,6 +25,8 @@
     "screenfull": "^5.1.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
+    "swr": "^1.3.0",
+    "swr-firestore-v9": "^1.0.5",
     "video-react": "^0.14.1",
     "web-vitals": "^1.1.0"
   },
